--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,12 +1,12 @@
-- name: Pricing
+- name: Historia
   link: /pricing/
   new_window: false
   highlight: false
-- name: Blog
+- name: Zdjęcia
   link: /blog/
   new_window: false
   highlight: false
-- name: About
+- name: Agroturystyka
   link: /about/
   new_window: false
   highlight: false
@@ -14,11 +14,3 @@
   link: /contact/
   new_window: false
   highlight: false
-- name: Login
-  link: /
-  new_window: true
-  highlight: false
-- name: Sign Up
-  link: /
-  new_window: true
-  highlight: true
