--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -10,7 +10,7 @@
   link: /about/
   new_window: false
   highlight: false
-- name: Contact
+- name: Kontakt
   link: /contact/
   new_window: false
   highlight: false
