--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -3,6 +3,7 @@
     link: /historia/
   - name: Zdjęcia
     link: /zdjecia/
+- links:
   - name: Agroturystyka
     link: /agro/
   - name: Kontakt
