--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -1,7 +1,7 @@
 - links:
   - name: Historia
     link: /historia/
-  - name: Zdjęcia
-    link: /zdjecia/
+  - name: Galeria
+    link: /galeria/
   - name: Kontakt
     link: /kontakt/
